--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Personal portfolio made using Reactjs"/>
     <meta property="og:title" content="Noel Pinto portfolio">
     <meta property="og:type" content="Website">
-    <meta property="og:url" content="https://portfolio-devanshsahni.vercel.app/">
+    <meta property="og:url" content="https://noelpinto47-portfolio.vercel.app/">
     <meta property="og:image" content="https://raw.githubusercontent.com/DevanshSahni/Portfolio/main/public/images/WebsiteImage.png">
 
     <title>Noel Pinto's Portfolio</title>
