--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Noel Pinto">
     <meta name="description" content="Personal portfolio made using Reactjs"/>
-    <meta property="og:title" content="Noel Pinto portfolio">
+    <meta property="og:title" content="Noel Pinto's Portfolio">
     <meta property="og:type" content="Website">
     <meta property="og:url" content="https://noelpinto47-portfolio.vercel.app/">
     <meta property="og:image" content="https://raw.githubusercontent.com/curiouslumber/noelpinto47-portfolio/refs/heads/main/public/images/website-image.png">
